BYOSnap Examples: Admin SDK integration
