# core/byosnap-node-ts/src/controllers/settingsController.ts
@@ -31,6 +31,7 @@ export class SettingsController extends Controller {
     @Get("/")
     @Extension("x-description", 'Get the settings for this Snap. This endpoint is called by the Snapser Configuration Tool.')
     @Extension("x-snapser-auth-types", ["internal"])
+    @Extension("x-snapser-sdk-categories", ["admin"])
     @Response<SettingsSchema>(200, "Settings retrieved successfully")
     @Response<ErrorResponse>(401, "Unauthorized")
     @Middlewares([authMiddleware(["internal"])])
@@ -52,6 +53,7 @@ export class SettingsController extends Controller {
     @Put("/")
     @Extension("x-description", 'Update the settings for this Snap. This endpoint is called by the Snapser Configuration Tool.')
     @Extension("x-snapser-auth-types", ["internal"])
+    @Extension("x-snapser-sdk-categories", ["admin"])
     @Response<SettingsSchema>(200, "Settings updated successfully")
     @Response<ErrorResponse>(400, "Bad request")
     @Response<ErrorResponse>(500, "Server error")
@@ -81,6 +83,7 @@ export class SettingsController extends Controller {
     @Get("custom")
     @Extension("x-description", 'Get the settings for the custom HTML configuration tool.')
     @Extension("x-snapser-auth-types", ["internal"])
+    @Extension("x-snapser-sdk-categories", ["admin"])
     @Response<CustomSettingsPayload>(200, "Custom settings retrieved successfully")
     @Response<ErrorResponse>(401, "Unauthorized")
     @Middlewares([authMiddleware(["internal"])])
@@ -102,6 +105,7 @@ export class SettingsController extends Controller {
     @Put("custom")
     @Extension("x-description", 'Update the settings from the custom HTML configuration tool.')
     @Extension("x-snapser-auth-types", ["internal"])
+    @Extension("x-snapser-sdk-categories", ["admin"])
     @Response(200, "Custom settings updated successfully")
     @Response<ErrorResponse>(500, "Server error")
     @Middlewares([authMiddleware(["internal"])])
